unpackaged/main/default/objects/fferpcore__exp_configurationItem__c/fferpcore__exp_configurationItem__c.object-meta.xml
<CustomObject>
    <description>Stores data used by the FinancialForce Configuration Builder.</description>
    <label>Configuration Item</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>