unpackaged/main/default/objects/fferpcore__exp_configurationItem__c/fields/fferpcore__ItemType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ItemType__c</fullName>
    <description>Configuration item type.</description>
    <label>Item Type</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>