unpackaged/main/default/objects/fferpcore__exp_configurationItem__c/fields/fferpcore__Label__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Label__c</fullName>
    <description>Descriptive label for the configuration item</description>
    <label>Display Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>