unpackaged/main/default/objects/fferpcore__exp_configurationItem__c/fields/fferpcore__LargeData__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LargeData__c</fullName>
    <description>Configuration data string (JSON)</description>
    <label>Large Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>